--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    background-color: rgb(227, 206, 22);
+    background-color: rgb(248, 238, 151);
+    max-width: 1920px;
 }
 
 .header {
@@ -12,12 +13,22 @@ body {
 }
 
 
+@media (max-width:1920px) {
+    max-width: 820px;
+    }
+    
+@media (max-width:810px) {
+        max-width: 320px;
+    }
+
 .bayan {
     position: relative;
     margin-bottom: 3px;
-    width: 80%;
+    width: 50%;
     color: #fff;
     overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
 }
 .bayan input {
     position: absolute;
@@ -25,7 +36,7 @@ body {
 .bayan label {
     position: relative;
   display: block;
-  padding: 0 0 0 1em;
+  padding: 0.5em;
   background: #f26215;
   font-weight: bold;
   line-height: 2;
@@ -34,8 +45,8 @@ body {
 
 .bayan_content {
     max-height: 0;
-  overflow: hidden;
-
+    overflow: hidden;
+    display: block;
 }
 
 .bayan_image {
@@ -45,7 +56,5 @@ body {
 
 .bayan input:hover ~ .bayan_content {
     max-height: 100vh;
-}
-.bayan label :hover  {
-    content: "+";
+    transition: 1s;
 }
